@@ -203,9 +203,18 @@
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
   min-width: 14em;
   position: absolute;
-  top: 1.5em;
-  left: 0.5em;
+  top: -0.2em;
+  left: -0.5em;
   z-index: 1000;
+
+  a:first-child {
+    font-size: 1.1rem;
+    border-bottom: var(--hr-border);
+
+    i {
+      font-size: 1.2rem;
+    }
+  }
 }
 
 .message__embed {
